# shortener_fastapi

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  app.py  conftest.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0ce5cc36d19d_base.py
db/: env.py
db/versions/: 062616d45589_start.py
infra/: .env.example  docker-compose.yaml  nginx.conf
scr/core/: base.py  config.py  db.py  exceptions.py
scr/exceptions/: __init__.py  exceptions.py
scr/models/: __init__.py  url_shortcut.py
scr/repos/: __init__.py  url_shortcut.py
scr/routers/: __init__.py  api.py  examples.py  shortcuter.py
scr/schemas/: __init__.py  url_shortcut.py
scr/services/: __init__.py  exceptions.py  url_shortcut.py  utils.py
scr/utils/: __init__.py  utils.py
src/: api.py  main.py
src/core/: alembic.py  config.py  database.py  models.py  schemas.py
src/shortcut/: dependencies.py  exceptions.py  models.py  openapi.py  routers.py  schemas.py  services.py  utils.py
tests/: conftest.py
tests/fixtures/: data.py
tests/shortcut/: common.py  test_shortcut.py
tests/shortcuter/: common.py  test_shortcuter.py
